# crome

./: .gitignore  README.md  conda-dependencies.yml  pyproject.toml
crome/cgg/cgg/: __init__.py  context_based_clustering.py  exceptions.py
crome/cgg/context/: __init__.py
crome/cgg/examples/: gridworld.py  persistence.py
crome/cgg/goal/: __init__.py  exceptions.py
crome/cgg/shared/: objects.py
crome/cgg/tools/: persistence.py
crome/contracts/component/: __init__.py
crome/contracts/contract/: __init__.py  conflicts_manager.py  exceptions.py
crome/contracts/examples/: opetations.py
crome/contracts/operations/: composition.py  concretization.py  conjunction.py  merging.py  quotient.py  separation.py
crome/logic/examples/: boolean.py  smt.py  temporal.py
crome/logic/patterns/: __init__.py  basic.py  robotic_movement.py  robotic_triggers.py
crome/logic/specification/: __init__.py  rules_extractors.py  trees.py
crome/logic/tools/: nuxmv.py  string_manipulation.py
crome/logic/typelement/: basic.py  robotic.py
crome/logic/typeset/: __init__.py
crome/synthesis/atom/: __init__.py
crome/synthesis/controller/: __init__.py  controller_info.py  mealy.py  synthesis.py
crome/synthesis/dynamicTransition/: Orchestrator.py  __init__.py  dynamicTransitionBuilder.py  example.py
crome/synthesis/examples/: dynamic_transition_example.py
crome/synthesis/legacy/: fix_point.py  mealy.py  parallel_synthesis.py  synthesis.py
crome/synthesis/orchestrator/: __init__.py
crome/synthesis/rule/: __init__.py
web/backend/: app.py
web/frontend/: package.json
(+57 files in other folders)
