[tool.poetry]
name = "crome"
version = "0.1.0"
description = "CROME"
authors = ["Piergiuseppe Mallozzi <piergiuseppe.mallozzi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.5.3"
aenum = ">=3.1.11"
treelib = ">=1.6.1"
docker-py = ">=1.10.6"
bloom-filter = ">=1.3.3"
pyeda = "=0.28.0"
pygraphviz = "^1.11"
tabulate = "^0.9.0"
dill = "^0.3.7"
igraph = "^0.11.3"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
